Fixed zotdiet image overflow

--- a/src/styles/ProjectPage.module.css
+++ b/src/styles/ProjectPage.module.css
@@ -30,7 +30,10 @@ h1, h2, h3, h4 {
 .imgPrototype {
     max-width:100%;
     min-width:90%;
-    border-radius:25px;
+    border-style:solid;
+    border-width:3px;
+    border-color:rgb(6, 156, 148);
+    border-radius:5px;
 }
 
 .button {
